# astrology-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_PHASE3.md  DB_MIGRATION.md  DOCKERIZE.md  Makefile  README.md  SPEC.md  TASK.md  docker-compose.yml  original-cbf8fa912296e0aa55caaa0f906fa5f9.webp:Zone.Identifier
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  run_migrations.py  scenario_results.jsonl  seed.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/astro_engine/: __init__.py  aspects.py  dignity.py  ephemeris.py  life_phases.py  serializers.py  synastry.py  transit.py
backend/app/core/: __init__.py  auth.py  deps.py  sse_manager.py
backend/app/llm/: __init__.py  client.py  mock_client.py  prompts.py  tools.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  auth.py  birth_profiles.py  charts.py  conversations.py  life_phases.py  me.py  messages.py  stream.py  synastry.py  (+1 more)
backend/data/: astrology.db-shm  astrology.db-wal
backend/harness_iterations/: final_comparison.json  iter_1.jsonl  iter_2.jsonl  iter_3.jsonl  iter_4.jsonl  iter_5.jsonl  iter_6_chartctx_fix.jsonl  iter_6_postfix.jsonl  iter_7_final.jsonl  iterations_summary.jsonl
backend/migrations/: 001_core_tables.sql  002_remaining_tables.sql  003_sqlite.sql
backend/tests/: ENHANCE_TESTING.md  __init__.py  conftest.py  scenario_runner.py  test_astro_engine.py  test_auth.py  test_birth_profiles.py  test_health.py  test_life_phases.py  test_migrations.py  test_synastry.py  test_transits.py  test_users.py
(+120 files in other folders)
